force-app/main/default/objects/Invoice_Footer_Setting__c/Invoice_Footer_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Invoice Footer Setting</label>
</CustomObject>