force-app/main/default/objects/Invoice_Footer_Setting__c/fields/CIN__c.field-meta.xml
<CustomField>
    <fullName>CIN__c</fullName>
    <label>CIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>