force-app/main/default/objects/Invoice_Footer_Setting__c/fields/HelpDesk__c.field-meta.xml
<CustomField>
    <fullName>HelpDesk__c</fullName>
    <label>HelpDesk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>