force-app/main/default/objects/Invoice_Footer_Setting__c/fields/Registered_Office__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office__c</fullName>
    <label>Registered Office</label>
    <type>TextArea</type>
</CustomField>